--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="productosCarrito">
         </div>
         <div id="total">$0</div>
+        <button id="boton-comprar">Comprar</button>
     </div>
     <h1>Tienda Libre</h1>
     <div class="main">
@@ -23,8 +24,7 @@
         <div class="productos" id="productos">            
         </div>
     </div>
-    <script src="./main.js"></script>
-    
-    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./main2.js"></script>  
 </body>
 </html>
